2005-11-03  Elijah Newren  <newren@gmail.com>

	Add routines to find all the edges between adjacent xineramas,
	minus those intersected by struts.  Includes a thorough testing
	case.

	* src/boxes.[ch] (meta_rect): new convenience function, moved here
	from testboxes.c,
	(meta_rectangle_find_nonintersected_xinerama_edges): new function

	* src/testboxes.c (meta_rect): removed now that it's in boxes.c,
	(new_xinerama_edge): new helper function to make a xinerama edge,
	(get_xinerama_edges): new helper function to find a pre-defined
	set of xinerama edges, (test_find_nonintersected_xinerama_edges):
	new test function

2005-11-01  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: Add more ideas mostly relating to edge
	resistance just to ensure I don't forget them, make sure I don't
	forget the important edge resistance and documentation things to
	cover

	* src/boxes.c (edges_overlap, rectangle_and_edge_intersection):
	some basic code simplifications and a couple more comments

2005-10-31  Elijah Newren  <newren@gmail.com>

	Add routines to find all the "screen edges" (where struts are
	considered to be offscreen), plus a thorough testing case.

	* src/boxes.[ch] (meta_rectangle_free_list_and_elements):
	* src/testboxes.c (test_regions_okay, test_region_fitting,
	  test_clamping_to_region, test_clipping_to_region,
	  test_shoving_into_region):
	* src/workspace.c (meta_workspace_free,
	  meta_workspace_invalidate_work_area):
	meta_rectangle_free_spanning_set() was renamed to
	meta_rectangle_free_list_and_elements()

	* src/boxes.c:

	(meta_rectangle_region_to_string):
	Output SOMETHING if the list is empty

	(meta_rectangle_edge_to_string, meta_rectangle_edge_list_to_string):
	new printing functions for edges

	(meta_rectangle_get_minimal_spanning_set_for_region):
	clean up the overview comment a little

	(struts_are_disjoint):
	(sort_edges):
	(edges_overlap):
	(rectangle_and_edge_intersection):
	(add_edges):
	(split_edge):
	(fix_up_edges):